--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='45' fill='%23141518' stroke='%23ffffff' stroke-width='8' /%3E%3C/svg%3E" type="image/svg+xml">
-
-  <title>UPC Label Generator</title>
-
+  <meta name="robots" content="noindex">
+  <title>PSB Label Generator</title>
   <link rel="stylesheet" href="dist/css/styles.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
   <main class="root">
@@ -252,7 +250,7 @@
 
               <main class="print__content label">
                 <div class="label__brand">
-                  <img class="label__logo" src="dist/img/brenthaven_logo_min.png">
+                  <img class="label__logo" src="dist/img/brenthaven_min.png">
                 </div>
                 
                 <div class="label__description">
@@ -312,7 +310,7 @@
 
               <main class="print__content label">
                 <div class="label__brand">
-                  <img class="label__logo" src="dist/img/brenthaven_logo_min.png">
+                  <img class="label__logo" src="dist/img/brenthaven_min.png">
                 </div>
                 
                 <div class="label__description">
@@ -363,6 +361,7 @@
       </div>
     </div>
   </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="dist/js/vendors.2.js"></script>
   <script src="dist/js/main.js"></script>
 </body>
