further minor changes 🥲

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="sidebar">
         <div class="sidebar__logo">
           <div class="sidebar__logo-container">
-            <img src="dist/img/psb-logo-only_min.png">
+            <img src="dist/img/psb_min.png">
           </div>
           <div class="sidebar__logo-title">
             Pioneer Square Brands
