continued shipping mark development

--- a/index.html
+++ b/index.html
@@ -178,6 +178,9 @@
 
         <div class="preview__content preview__content--expanded">
 
+          <div class="page page--carton page--carton-front" data-type="shipping-front"></div>
+          <div class="page page--carton page--carton-side" data-type="shipping-side"></div>
+
           <div class="page page--a4" data-type="polybag">
             <div class="page__content print">
 
