--- a/index.html
+++ b/index.html
@@ -213,19 +213,12 @@
       <div class="main preview">
         <div class="topbar preview__controls">
           <form class="layout__form">
-            <fieldset class="preview__layout layout button-group">
+            <fieldset class="preview__layout layout">
               <legend class="visually-hidden">Layout Options</legend>
-
-              <input type="radio" id="expanded" name="layout" value="expanded" aria-labelledby="label-expanded" class="visually-hidden">
-              <label for="expanded" id="label-expanded" class="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-file-scan"><path d="M20 10V7.5L14.5 2H6a2 2 0 0 0-2 2v16c0 1.1.9 2 2 2h4.5"/><polyline points="14 2 14 8 20 8"/><path d="M16 22a2 2 0 0 1-2-2"/><path d="M20 22a2 2 0 0 0 2-2"/><path d="M20 14a2 2 0 0 1 2 2"/><path d="M16 14a2 2 0 0 0-2 2"/></svg>
-                <span class="visually-hidden">View Pages</span>
-              </label>
-
-              <input type="radio" id="condensed" name="layout" value="condensed" aria-labelledby="label-condensed" class="visually-hidden" checked>
-              <label for="condensed" id="label-condensed" class="button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-qr-code"><rect width="5" height="5" x="3" y="3" rx="1"/><rect width="5" height="5" x="16" y="3" rx="1"/><rect width="5" height="5" x="3" y="16" rx="1"/><path d="M21 16h-3a2 2 0 0 0-2 2v3"/><path d="M21 21v.01"/><path d="M12 7v3a2 2 0 0 1-2 2H7"/><path d="M3 12h.01"/><path d="M12 3h.01"/><path d="M12 16v.01"/><path d="M16 12h1"/><path d="M21 12v.01"/><path d="M12 21v-1"/></svg>
-                <span class="visually-hidden">View Labels Only</span>
+              <input type="checkbox" id="expanded" class="checkbox-container visually-hidden"  aria-labelledby="label-expanded">
+              <label for="expanded" id="label-expanded" class="layout__expanded button">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shopping-bag"><path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"/><path d="M3 6h18"/><path d="M16 10a4 4 0 0 1-8 0"/></svg>
+                <span class="visually-hidden">Expand</span>
               </label>
             </fieldset>
           </form>
