--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <legend class="visually-hidden">Layout Options</legend>
               <input type="checkbox" id="expanded" class="checkbox-container visually-hidden"  aria-labelledby="label-expanded">
               <label for="expanded" id="label-expanded" class="layout__expanded button">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-shopping-bag"><path d="M6 2 3 6v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V6l-3-4Z"/><path d="M3 6h18"/><path d="M16 10a4 4 0 0 1-8 0"/></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-fullscreen"><path d="M3 7V5a2 2 0 0 1 2-2h2"/><path d="M17 3h2a2 2 0 0 1 2 2v2"/><path d="M21 17v2a2 2 0 0 1-2 2h-2"/><path d="M7 21H5a2 2 0 0 1-2-2v-2"/><rect width="10" height="8" x="7" y="8" rx="1"/></svg>
                 <span class="visually-hidden">Expand</span>
               </label>
             </fieldset>
@@ -567,7 +567,7 @@
     </div>
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="dist/js/vendors.2.js"></script>
-  <script src="dist/js/main.js"></script>
+  <script src="dist/js/vendors.js"></script>
+  <script type="module" src="dist/js/main.js"></script>
 </body>
 </html>
