--- a/index.html
+++ b/index.html
@@ -469,9 +469,7 @@
             </div>
           </div>
 
-          <div class="carton-separator" style="width: 100%;"></div>
-
-          <div class="page page--carton page--carton-front" data-type="shipping-front">
+          <div class="page page--carton page--carton-front page--hidden" data-type="shipping-front">
             <div class="scaler-wrapper">
               <div class="scaler">
                 <div class="page__content print">
@@ -538,7 +536,7 @@
             </div>
           </div>
 
-          <div class="page page--carton page--carton-side" data-type="shipping-side">
+          <div class="page page--carton page--carton-side page--hidden" data-type="shipping-side">
             <div class="scaler-wrapper">
               <div class="scaler">
                 <div class="page__content print">
