replaced cat image with actual tihi image. booo

--- a/index.html
+++ b/index.html
@@ -830,7 +830,7 @@
                         <path d="m12 8 4.74-2.85" />
                         <path d="M12 13.5V8" />
                       </svg>
-                      <img src="dist/img/default-tihi.jpg" />
+                      <img src="dist/img/tihi.png" />
                     </div>
                   </main>
                 </div>
